# get-livecaptions-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: FUNDING.yml
src/: main.cpp  pch.h
